✨️ PIC-1690: For existing case get probationStatus for all defendants